--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Medi Connect || Health Care & Awarness</title>
+    <title>Medi Connect || Health Care & Awarness for Hackathon</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/mediconnect.png"/>
@@ -110,7 +110,7 @@
 				Health Care & Awarness
 							</h1>
               <p class="wow fadeInUp" data-wow-delay=".6s">
-                This hybrid model ensures sustainable revenue while providing affordable healthcare access.
+                This hybrid model ensures sustainable revenue while providing affordable healthcare access to easily available to all used in one platform.
               </p>
 							<a href="javascript:void(0)" class="main-btn btn-hover wow fadeInUp" data-wow-delay=".6s">Book Now</a>
             </div>
